# course_work_5_database

./: README.md  config.py  data_base.ini  main.py  pyproject.toml
src/: db_manager.py  hh_api.py  hh_employer.py  utils.py
