[tool.poetry]
name = "course-work-5-database"
version = "0.1.0"
description = "Получаем данные о работодателях и их вакансиях с сайта hh.ru"
authors = ["ikachaeva <irenkachaeva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
